welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:10: error: Invalid literal number
		for(pas<-0to 8)
                         ^Runner:12: error: ')' expected but '}' found.
		}
                ^